--- a/src/style.less
+++ b/src/style.less
@@ -5,13 +5,37 @@
 html {
   font-size: 20px;
 }
+@font-face {
+  font-family: 'Some Weatz Swashes';
+  src: url('~@assets/fonts/Some Weatz Swashes.ttf');
+}
+@font-face {
+  font-family: 'Cenobyte';
+  src: url('~@assets/fonts/Cenobyte.ttf');
+}
+@font-face {
+  font-family: Shardee;
+  src: url('~@assets/fonts/Shardee.ttf');
+}
+@font-face {
+  font-family: Quadaptor;
+  src: url('~@assets/fonts/Quadaptor.ttf');
+}
+@font-face {
+  font-family: Carrington;
+  src: url('~@assets/fonts/Carrington.ttf');
+}
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: Carrington, Quadaptor, Shardee, 'Cenobyte', 'Some Weatz Swashes', -apple-system,
+    BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-weight: normal;
+  font-size: 1.5rem;
+  letter-spacing: 2px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
-  font-size: 1rem;
+
   color: #000;
   background: #fff;
   line-height: 1.57;
