--- a/src/style.less
+++ b/src/style.less
@@ -27,10 +27,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
   color: #fff;
-  background: #222;
   line-height: 1.57;
 }
-pre {
+strong {
   display: inline-block;
   color: #9b59b6;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
