--- a/src/pages/Home/home.less
+++ b/src/pages/Home/home.less
@@ -38,15 +38,29 @@
     align-items: center;
     padding: 0 5rem;
     box-sizing: border-box;
+    .fade() {
+      transition-property: transform, opacity;
+      transition-duration: 1.5s;
+      transition-timing-function: ease-in-out;
+      opacity: 0;
+    }
+    .fadeIn() {
+      transform: translate(0, 0);
+      opacity: 1;
+    }
     .summary {
       width: 30rem;
       p {
         user-select: text;
+        .fade();
+        transform: translateY(-10rem);
       }
       ul {
         font-family: Quadaptor;
         text-transform: uppercase;
         margin-bottom: 1rem;
+        transform: translateX(-10rem);
+        .fade();
         li {
           margin-left: 1rem;
           user-select: text;
@@ -55,6 +69,7 @@
       a {
         font-family: Helveticaa;
         text-transform: uppercase;
+        .fade();
       }
     }
     .me {
@@ -69,9 +84,21 @@
         width: 16rem;
         border-radius: 20px;
         margin-bottom: 1rem;
+        transform: translateX(10rem);
+        .fade();
       }
       p {
         user-select: text;
+        transform: translateY(10rem);
+        .fade();
+      }
+    }
+    &.show {
+      p,
+      ul,
+      a,
+      img {
+        .fadeIn();
       }
     }
   }
