Improve animation of home

--- a/src/pages/home/style.less
+++ b/src/pages/home/style.less
@@ -34,7 +34,7 @@
     height: 100%;
     background: #222;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 0 5rem;
     box-sizing: border-box;
